--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Generator</title>
-    <link rel="stylesheet" href="QRGEN.css">
+    <link rel="stylesheet" href="QRGEN.CSS">
 </head>
 <body>
     <div class="container">
