--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fancy QR Code Generator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="QRGEN.CSS">
 </head>
 <body>
     <div class="container">
@@ -23,6 +23,6 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/qrcode-generator/qrcode.min.js"></script>
-    <script src="script.js"></script>
+    <script src="QRGEN.js"></script>
 </body>
 </html>
