--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fancy QR Code Generator</title>
+    <title>QR Code Generator</title>
     <link rel="stylesheet" href="QRGEN.CSS">
 </head>
 <body>
     <div class="container">
-        <h1>Fancy QR Code Generator</h1>
+        <h1>QR Code Generator</h1>
         <div class="input-container">
             <input type="text" id="inputText" placeholder="Enter text">
             <button onclick="generateQRCode()">Generate</button>
