--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="qrcode"></div>
         <div class="buttons">
             <button onclick="downloadQRCode()">Download QR Code</button>
-            <button onclick="shareQRCode()">Share QR Code</button>
+            <!--<button onclick="shareQRCode()">Share QR Code</button>-->
         </div>
         <footer>
             <p>Created with love <span>&#10084;</span> by Pulkit Aggarwal</p>
